services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ashapp-service
  namespace: default
spec:
  selector:
    app: ashapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
