tomcat-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: default
spec:
  selector:
    app: tomcat
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
